--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="sidebarWrapper">
           <div id="leftsidebar" class="sidebar">
             <div id="introduction">
-              <h3>Orion Technologies</h3>
+              <h3>Orion Technologies's Portfolio</h3>
               <p>Orion Technologies a constellation of solution for your company.
                 Orion Technologies born in Guatemala City influenced on Silicon Valley, We work to give you all the solution that
                 your company needs.
